--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1>Hori<span class="seo">SEO</span>n</h1>
+        <h1>Hori<span id="seo">SEO</span>n</h1>
         <nav>
             <ul>
                 <li>
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-    <img class="hero"/>
+    <img id="hero"/>
     <section class="content">
         <article id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" atl="Search Engine Optimiztion" class="float-left" />
